--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -4,10 +4,177 @@
     position: relative;
 }
 
+/* 漢堡選單開始 */
+.burger-container{
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    margin-top: 2.5%;
+    margin-left: 50%;
+    margin-left: 95%;
+    border-radius: 25%;
+    position: fixed;
+    z-index: 1;
+}
+
+.burger-container .btn-open{
+    position: relative;
+    right: 40px;
+    top: -30px;
+    color: #fff;
+    z-index: 1;
+}
+
+.burger{
+    width: 40px;
+    height: 40px;
+    background-color: #B28850;
+    margin: auto;
+    position: relative;
+    border-radius: 25%;
+    z-index: 1;
+}
+
+.burger span{
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    margin-bottom: 0;
+    transition: transform .3s ease-in-out, top .3s ease-in-out .3s;
+    position: relative;
+    transform: translate(5px,8px);
+    inset: 0;
+}
+
+.burger span:nth-child(2),
+.burger span:nth-child(3){
+    margin-top: 7px;
+}
+
+#menu{
+    display: none;
+}
+
+#menu:checked + .menu-list{
+    width: 15px;
+    height: 15px;
+}
+
+#menu:checked + label .burger span:nth-child(1){
+    transform: translate(5px,12px) rotate(135deg);
+    top: 5px;
+    transition: top .3s ease-in-out, transform .3s ease-in-out ;
+}
+
+#menu:checked + label .burger span:nth-child(2){
+    display: none;
+}
+
+#menu:checked + label .burger span:nth-child(3){
+    transform: translate(5px,12px) rotate(-135deg);
+    top: -4px;
+    transition: top .3s ease-in-out, transform .3s ease-in-out ;
+}
+
+header .menu-list {
+    background-image: url(../images/menubg.jpg);
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    transform: scaleY(0);
+    transition: transform .3s ease-in-out;
+    transform-origin: 50% 0;
+}
+
+header .menu-list a{
+    text-decoration: none;
+    font-size: 28px;
+    line-height: 3;
+    color: #fff;    
+}
+
+header .menu-list a:hover{
+    color: #b28850;
+}
+
+header .menu-list .menu-logo{
+    position: relative;
+    right: 300px;
+    top: 250px;
+}
+
+#menu:checked ~ .menu-list {
+        transform: scaleY(1);
+    }
+
+/* 漢堡選單結束 */
+
+/* 立即訂位開始 */
+.booking-btn{
+    position: fixed;
+    right: 3%;
+    top: 60%;
+    z-index: 1;
+}
+.booking-btn img{
+    width: 50px;
+    height: 50px;
+    animation: booking 3s ease infinite alternate;
+}
+
+.booking-btn a{
+    width: 50px;
+    text-decoration: none;
+    color: #fff;
+    writing-mode: vertical-lr;
+    letter-spacing: 5px;
+    text-shadow: 5px 5px 5px #b28850;
+}
+
+.booking-btn a:hover{
+    font-size: 18px;
+}
+@keyframes booking{
+    0%{
+        transform: rotateY(0deg);
+    }
+    50%{
+        transform: rotateY(90deg);
+    }  
+    100%{
+        transform: rotateY(180deg);
+    }
+    }
+/* 立即訂位結束 */
+
+    /* 頂端logo與購物車開始 */
+.top .logo {
+    position: absolute;
+    top: .5%;
+    left: 10px;
+    width: 200px;
+    height: 100px;
+    }
+
+.top .shopping-cart{
+    position: absolute;
+    right: 10%;
+    top:5%;
+    }
+    /* 頂端logo與購物車結束 */
+
 /* 上半部開始 */
 .container{
     width: 1200px;
     margin: auto;
+    padding-top: 100px;
 }
 
 .container .slogn{
@@ -81,6 +248,7 @@
 }
 .content .description .side-txt .cat{
     align-self: flex-end;
+    margin-top: 50px;
 }
 
 /* 左側圖片區 */
@@ -98,4 +266,331 @@
 .content .side-pic .cat{
     margin: 150px 0;
     align-self: flex-end;
+}
+
+/* 中間大圖區 */
+.center-pic{
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.center-pic img{
+    width: 100%;
+    vertical-align: middle;
+}
+
+.center-pic .beer{
+    width: 100%;
+    vertical-align: middle;
+    position: relative;
+}
+
+.center-pic .bubbles{
+    width: 100%;
+    vertical-align: middle;
+    position: absolute;
+    top: 55%;
+    left: 0;
+}
+
+.center-pic .bbq{
+    width: 100%;
+    vertical-align: middle;
+    position: absolute;
+    top: 80%;
+}
+
+/* 中間文字區 */
+.center-pic .beer .bubbles .center-txt{
+    width: 100%;
+    background-image: url('../images/about_black.svg');
+    background-size: cover;
+    color: #fff;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-pic .beer .bubbles .center-txt h3{
+    width: 150px;
+    font-size: 25px;
+    padding-top: 20px;
+}
+
+.center-pic .beer .bubbles .center-txt p{
+    width: 500px;
+    font-size: 20px;
+    line-height: 1.5;
+    padding-top: 20px;
+    align-self: flex-end;
+}
+
+.center-pic .beer .bubbles .center-txt a{
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    border: 2px solid #b28850;
+    border-radius: 5px;
+    color:#b28850
+}
+
+.center-pic .beer .bubbles .center-txt img,
+.center-pic .beer .bbq .center-txt img{
+    width: 70px;
+    margin:0 50px;
+}
+
+/* 烤肉上方文字 */
+.center-pic .beer .bbq .center-txt{
+    width: 100%;
+    background-image: url('../images/about_blackdown.svg');
+    background-size: cover;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 35px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-pic .beer .bbq .center-txt h3{
+    width: 150px;
+    font-size: 25px;
+    padding-top: 20px;
+}
+
+.center-pic .beer .bbq .center-txt p{
+    width: 500px;
+    font-size: 20px;
+    line-height: 1.5;
+    padding-top: 20px;
+    align-self: flex-end;
+}
+
+.center-pic .beer .bbq .center-txt a{
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    padding: 5px;
+    border: 2px solid #b28850;
+    border-radius: 5px;
+    color:#b28850
+}
+
+/* 下半部Our story */
+.story-wrap{
+    width: 1200px;
+    margin: auto;
+    padding-top: 55%;
+}
+
+.story-wrap h2{
+    color: #fff;
+    font-size: 28px;
+    text-align: center;
+    padding: 50px;
+    text-shadow: 3px 3px 10px #000;
+}
+
+.story-wrap .pic{
+    width: 600px;
+    margin: auto;
+}
+
+.story-wrap img{
+    width: 100%;
+    vertical-align: middle;
+}
+
+.story-wrap .circle{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+justify-content: center;
+}
+
+.story-wrap .circle .btn{
+    width: 100px;
+    height: 100px;
+    background-color: #b28850;
+    border-radius: 50%;
+    margin: 20px 50px;
+    position: relative;
+}
+
+
+.story-wrap .circle .btn span{
+    text-decoration: none;
+    color: #000;
+    position: absolute;
+    top: 40%;
+    left: 30%
+}
+
+#switch:checked ~ .story-wrap .circle label[for="switch"] ul li{
+    background-color: #fff;
+}
+
+#switch-two:checked ~  .story-wrap .circle label[for="switch-two"] ul li{
+    background-color: #fff;
+    }
+
+#switch:checked ~ .story-wrap .staff{
+    display: block;
+}
+
+#switch-two:checked ~  .story-wrap .cat{
+    display: block;
+}
+
+#switch-two:checked ~  .story-wrap .staff{
+    display: none;
+}
+
+#switch-two:checked ~  .story-wrap .cat{
+    display: block;
+}
+
+#switch,#switch-two{
+    display: none;
+}
+
+.story-wrap .cat{
+    display: none;
+}
+
+/* footer開始 */
+footer {
+    background-size: cover;
+    box-sizing: border-box;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 175px;
+    background-image: url(../images/footer.svg);
+    display: flex;
+    justify-content: space-evenly;
+    font-family: Microsoft JhengHei;
+}
+.footer-pic img {
+    width: 170px;
+    bottom: 0px;
+    top: 10px;
+    position: absolute;
+    display: block;
+    margin-right: 50px;
+}
+
+.footer a {
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    line-height: 100px;
+    margin: 0px 20px;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.footer ul li {
+    display: inline;
+}
+
+.footer ul li:nth-child(1) {
+    margin-left: 60px;
+}
+
+.footer-icon {
+    width: 300px;
+    margin: 10px 0;
+    position: relative;
+    top: 20px;
+    bottom: 20px;
+    left: 20px;
+}
+
+.footer-icon span {
+    color: #fff;
+    font-family: Microsoft JhengHei;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    position: absolute;
+    right: 85px;
+    bottom: 120px;
+}
+
+.footer-icon .facebook {
+    position: relative;
+    bottom: 5px;
+    font-size: 25px;
+}
+
+.footer-icon .instagram {
+    position: relative;
+    top: 10px;
+    font-size: 25px;
+}
+
+.warning-box {
+    width: 100%;
+    height: 75px;
+    bottom: 0;
+    position: fixed;
+    background-image: url(../images/footerbeer.svg);
+    background-size: cover;
+}
+
+.warning-box-txt {
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+.warning-box p {
+    color: #eee;
+    position: absolute;
+    top: 20px;
+}
+
+.warning-box .tibame {
+    width: 300px;
+    right: 10px;
+    top: 5px;
+    bottom: 5px;
+    line-height: 1.5;
+}
+
+.warning-box .drink {
+    font-size: 50px;
+    left: 15%;
+    right: 15%;
+}
+
+.warning-box .drink span {
+    color: fff;
+    font-weight: bolder;
+}
+
+.footer a:hover {
+    color: #b28850;
+}
+
+.footer-icon a {
+    color: #fff;
+}
+
+.footer-icon a:hover {
+    color: #b28850;
 }
