--- a/styles/food.css
+++ b/styles/food.css
@@ -1,34 +1,34 @@
 /* 圖片跑馬燈區 */
-.marquee{
+.picmarquee{
     width: 100%;
     padding-top: 120px;
     margin: auto;
 }
 
-.marquee .view{
+.picmarquee .view{
     width: 100%;
     overflow: hidden;
     background-color: #0008;
 
 }
 
-.marquee .view .pic-container{
+.picmarquee .view .pic-container{
     width: 1200px;
     margin: auto;
     display: flex;
 }
 
-.marquee .view .pic-container{
+.picmarquee .view .pic-container{
     animation: marquee 20s -1s infinite linear;
 }
 
-.marquee .view .pic-container .pic{
+.picmarquee .view .pic-container .pic{
     width: 300px;
     margin: 0 5px;
     border: 3px solid #b28850;
 }
 
-.marquee .view .pic-container .pic img{
+.picmarquee .view .pic-container .pic img{
     width: 300px;
     height: 200px;
     vertical-align: middle;
@@ -63,7 +63,6 @@
 
 .classic-beer .title .txt{
     font-size: 22px;
-    font-weight: bold;
     text-align: center;
     position: absolute;
     margin: auto;
@@ -154,7 +153,6 @@ x
 
 .delicious-food .title .txt{
     font-size: 22px;
-    font-weight: bold;
     text-align: center;
     position: absolute;
     margin: auto;
@@ -238,7 +236,7 @@ x
     content: '————————————————';
 }
 .menu-box .menu .front p::after{
-    content:'——————';
+    content:'———————';
 }
 
 .menu-box .menu .front .slogn{
@@ -250,7 +248,6 @@ x
     font-size: 22px;
     text-align: center;
     color: #fff;
-    font-weight: bold;
 }
 .menu-box .front .slogn i{
     color: #b28850;
