--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -35,7 +35,7 @@
     color: #333;
     font-size: 28px;
     padding-left: 20px;
-    font-weight: bloder;
+    font-weight: bolder;
     text-shadow: 5px px px #000;
 }
 .cart-container .fa-solid h1{
@@ -49,21 +49,38 @@
     justify-content: center;
     align-items: center;
 }
-.btn .back,
+
 .btn .next{
-    border: 2px solid #b28850;
+    background-color:#b28850;
+    width: 40px;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 10px #000;
+}
+
+.btn .next a{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: #333;
+}
+
+.btn .back{
+    display: block;
     width: 40px;
     padding: 10px;
     margin: 20px;
     border-radius: 5px;
 }
-.btn .back a,
-.btn .next a{
+
+.btn .back a{
     display: block;
     text-align: center;
     text-decoration: none;
     color: #b28850;
 }
+
 
 .cart{
     width: 600px;
