--- a/styles/booking.css
+++ b/styles/booking.css
@@ -71,7 +71,7 @@ article form{
     background-color: #0008;
     border-radius: 2.5%;
     position: absolute;
-    right: 15%;
+    right: 10%;
     top: 23%;
     line-height: 2.5;
     padding: 20px;
@@ -86,8 +86,12 @@ article textarea{
 
 article button{
     position: absolute;
-    right: 45%;
+    right: 40%;
     bottom: 20%;
+    width: 80px;
+    padding: 5px;
+    margin-top: 20px;
+    border-radius: 5px;
 }
 /* 表單區結束 */
 
