--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -22,11 +22,6 @@
     justify-content: space-evenly;
 }
 
-
-.container .slogn img{
-    border-radius: 10px;
-}
-
 .container .slogn .txt h1{
     width: 300px;
     font-size: 28px;
@@ -69,12 +64,19 @@
 }
 
 .container .slogn img{
-    width: 500px;
-    height: 600px;
+    width: 400px;
+    height: 500px;
+    margin-top: 20px;
 }
 
 .container .aboutfood img{
-    width: 500px;
+    width: 400px;
+    margin-top: 20px;
+}
+
+.container .slogn img,
+.container .aboutfood img{
+    border-radius: 10px;
 }
 
 /* 中間大圖區 */
