--- a/styles/news.css
+++ b/styles/news.css
@@ -44,47 +44,47 @@
     font-size: 22px;
     position: absolute;
     left: 20%;
-     top: 30%;
+    top: 30%;
     margin: auto;
 }
 
 @keyframes lights {
     0% {
-      color: hsl(230, 40%, 80%);
-      text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
+    color: hsl(230, 40%, 80%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
     0 0 0.125em hsla(320, 100%, 60%, 0.3),
     -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
     1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
-}
+    }
     30% { 
-      color: hsl(230, 80%, 90%);
-      text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+    color: hsl(230, 80%, 90%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
     0 0 0.125em hsla(320, 100%, 60%, 0.5),
     -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 02),
     0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
-}
+    }
     40% { 
-      color: hsl(230, 100%, 95%);
-      text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+    color: hsl(230, 100%, 95%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
     0 0 0.125em hsla(320, 100%, 90%, 0.5),
     -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 02),
     0.25em 0.125em 0.125em hsla(200, 100%, 60%, 04);
-}
+    }
     70% {
-      color: hsl(230, 80%, 90%);
-      text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
+    color: hsl(230, 80%, 90%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.5),
     0 0 0.125em hsla(320, 100%, 60%, 0.5),
     0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
     -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 04);
-}
+    }
     100% {
-      color: hsl(230, 40%, 80%);
-      text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
+    color: hsl(230, 40%, 80%);
+    text-shadow: 0 0 1em hsla(320, 100%, 50%, 0.2),
     0 0 0.125em hsla(320, 100%, 60%, 0.3),
     1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
     -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+    }
 }
-  }
     /* 標題區結束 */
     /* 卡片區開始 */
 .news-card-container{
@@ -106,29 +106,30 @@
 }
 
 .news-card a{
-    color: #fff;
     font-size: 18px;
     line-height: 1.5;
     margin: auto;
     text-decoration: none;
 }
 
+
 .news-card a span{
     display: block;
     position: relative;
-    /* bottom: 50%; */
     padding: 5px;
     text-align: center;
     display: none;
     bottom: 20%;
     width: 97%;
     height: 15%;
-
     display: block;
     margin: auto;
     color: #fff;   
     background-color: #0008;
-    
+}
+
+.news-card:hover a span{
+    color: #ffe75f;
 }
 
 .news-card img{
@@ -159,7 +160,7 @@
 .news-card .new span{
     display: block;
     color: #fe0;
-    padding: 5px;
+    padding: 2px;
     font-weight: bold;
     font-size: 18px;
     text-align: center;
