--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -46,13 +46,13 @@
 
 .container .aboutfood .txt h2{
     width: 300px;
-    font-size: 22px;
+    font-size: 28px;
     color: #fff;
     line-height: 2;
     border-top: 3px solid #fff;
     border-bottom: 3px solid #fff;
     margin: 20px 0;
-    text-align: right;
+    text-align: center;
 }
 
 .container .aboutfood .txt p{
