--- a/styles/index.css
+++ b/styles/index.css
@@ -31,36 +31,13 @@
     color: #fff;
     font-size: 36px;
     letter-spacing: 4px;
-    text-align:right;
+    text-align:center;
     position: absolute;
-    bottom: 40%;
-    right: 20%;
+    inset: 0;
+    margin: 15% auto;
     line-height: 2;
-    text-shadow: 3px 3px 10px #b28850;
+    animation: lights 5s 750ms linear infinite;
 }
-
-/* 首頁第二張大啤酒圖開始 */
-
-.center-banner{
-    width: 100%;
-    height: 100vh;
-    background-image: url(../images/index_centerbeer.png);
-    background-size: cover;
-    position: relative;
-}
-
-.center-banner .center-banner-txt{
-    color: #FFF;
-    font-size: 32px;
-    line-height: 2;
-    letter-spacing: 25px;
-    writing-mode: vertical-lr;
-    position: absolute;
-    left: 20%;
-    top: 10%;
-    text-shadow: 3px 3px 10px #000;
-}
-/* 首頁第二張大啤酒圖結束 */
 
 /* 活動卡片區開始 */
 .news{
@@ -139,6 +116,7 @@
     position: absolute;
     top: 64%;
     left: 5px;
+    margin: 3px 3px;
 }
 
 .news-card:hover .tag{
@@ -177,25 +155,19 @@
 
 /* 首頁影片區 */
 .draft-beer{
-    width: 1200px;
+    width: 100%;    
     margin: auto;
     display: flex;
     justify-content: center;
-    position: relative;
 }
 
-.draft-beer-pic img{
-    width: 260px;
-    height: 150px;
-    display: block;
-}
-
-.draft-beer-txt h2{
-    font-size: 18px;
-    position: absolute;
-    top: 45%;
-    bottom: 45%;
-    left: 46.5%;
+.draft-beer h2{
+    color: #B28850;
+    margin: 50px 0;
+    text-align: center;
+    font-size: 28px;
+    letter-spacing: 10px;
+    text-shadow: 3px 3px 10px #000;
 }
 
 .draft-beer-video video{
@@ -227,7 +199,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* position: relative; */
     box-sizing: border-box;
 }
 
@@ -283,80 +254,116 @@
     color: #FFE75F;
     text-shadow: 3px 3px 10px #000;
 }
-    /* 底部知識區開始 */
-article{
-    width: 60%;
-    margin: auto;
+
+/* 關於釀酒廠 */
+.brewery{
+    width: 100%;    
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    background-color: #b28850;
 }
-article h2{
+
+.brewery .pic{
+    max-width: 50%;
+}
+
+.brewery .pic img{
     width: 100%;
+    height: 100%;
+}
+
+.brewery .txt{
+    width: 800px;
+    margin: auto;
+    padding: 20px 30px;
+}
+
+.brewery .txt h2{
+    font-size: 28px;
+    color: #333;
+    line-height: 2;
+    border-top: 3px solid #333;
+    border-bottom: 3px solid #333;
+}
+
+.brewery .txt p{
+    color: #333;
+    line-height: 2;
+    margin: 20px 0;
+}
+
+.brewery .txt a{
+    display: block;
+    margin: auto;
+    padding:15px 0;
+    text-align: right;
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+}
+
+.brewery .txt a:hover {
+    color: #FFE75F;
+}
+
+/* MIU的好評 */
+.feedback{
+    width: 100%;    
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.feedback h2{
     color: #B28850;
-    margin: 50px 0;
+    margin: 20px 0;
     text-align: center;
     font-size: 28px;
     letter-spacing: 10px;
     text-shadow: 3px 3px 10px #000;
 }
-article .beer-know{
-    border: 5px ridge #b28850 ;
 
-}
-.top-know,
-.bottom-know{
-    width: 100%;
-    padding:5px 0;
-    margin: 10px 0;
+.feedback-container{
+    width: 1200px;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-.top-know{
-    border-bottom: 2px dashed #b28850 ;
-}
-.bottom-know{
-    flex-direction: row-reverse;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
-.top-know .pic,
-.bottom-know .pic{
-    align-self: center;
-}
-.top-know .txt,
-.bottom-know .txt{
-    width: 400px;
-    color:#fff;
+.feedback-card{
+    box-sizing: border-box;
+    width: 300px;   
+    height: 300px;
+    margin: 30px 18px 30px 18px;
+    border-radius: 2%;
+    border: 5px solid #B28850;
+    transition: 1s;
 }
 
-.top-know .txt h3,
-.bottom-know .txt h3{
-    color: #FFE75F;
-    font-size: 22px;
-    letter-spacing: 2.2px;
-    margin: 5px 10px;
+.feedback-card .txt{
+    color: #fff;
+    font-size: 20px;
+    padding: 5px 10px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.feedback-card .txt{
+    color: #fff;
     text-shadow: 3px 3px 10px #000;
 }
 
-.top-know .txt p,
-.bottom-know .txt p{
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 1px;
-    margin: 5px 10px;
-}
-.know-btn{
+.feedback-card .pic img{
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
 }
-.know-btn .btn a{
-    display: block;
-    text-decoration: none;
-    color: #ffffff;
+
+.feedback-card .tag{
+    width: 280px;
+    height: 15px;
     font-size: 16px;
-    height: 20px;
-    margin: 15px 0;
+    color: #fff;
+    text-align: right;
 }
-.know-btn .btn a:hover{
-    color: #FFE75F;
-}
-/* 底部知識區結束 */
