--- a/styles/all.css
+++ b/styles/all.css
@@ -330,7 +330,7 @@ footer {
 
 .warning-box .tibame {
     font-size: 14px;
-    width: 270px;
+    width: 20%;
 }
 
 .warning-box .drink {
@@ -342,7 +342,7 @@ footer {
 
 .warning-box img{
     width: 60px;
-    height: 6dvb;
+    height: 60px;
     vertical-align: middle;
     margin: 0 10px;
 }
