--- a/styles/all.css
+++ b/styles/all.css
@@ -7,6 +7,7 @@
     font-family: "Noto Sans TC",Raleway,sans-serif,'Times New Roman', Times, serif;
     font-style: normal;
     overflow-x: hidden;
+    position: relative;
 }
 
 /* 選單 */
