--- a/styles/takeout.css
+++ b/styles/takeout.css
@@ -10,8 +10,7 @@
 .banner .txt{
     background-color: #0008;
     position: absolute;
-    top:35%;
-    left: 0;
+    top:20%;
     width: 100%;
 }
 .banner .txt p{
@@ -50,7 +49,7 @@
 .food-card-container .card{
     width: 280px;
     box-sizing: border-box;
-    background-color: #B7B8BD;
+    background-color: #C3C3D6;
     border-radius: 15px;
     margin: 10px;
 }
@@ -78,14 +77,16 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    color: #b28850;
 }
 .food-card-container .card .btn .fa-dollar-sign span{
     padding-left: 5px;
+    letter-spacing: 1.5px;
     color: #e00;
 }
 
-.food-card-container .card .btn .fa-circle-minus{
-    color: #666;
+.food-card-container .card .btn .count span{
+margin: 0 10px;
 }
 
 .next-btn{
@@ -94,7 +95,7 @@
     padding: 10px;
     margin-top: 20px;
     border-radius: 5px;
-    box-shadow: 3px 3px 10px #000;
+    box-shadow: 3px 3px 3px #000;
 }
 
 .next-btn a{
